A fix (bug #6999: Traditional: Wrong SQLSTATE returned for string truncation).